2008-10-18  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-data-select.[ch]: added gda_data_select_compute_columns_attributes()
	which implements what was in gda_data_model_iter_compute_attributes(), better to
	make it there since it was specific to the GdaDataSelect object
	* libgda/gda-data-model-iter.[ch]: removed gda_data_model_iter_compute_attributes()
	* libgda/sqlite/gda-sqlite-provider.c:
	* providers/mysql/gda-mysql-provider.c:
	* libgda/gda-data-proxy.c:
	* libgda/gda-holder.c:
	* tests/value-holders/check_holder.c:
	* libgda/gda-easy.c: minor bug fixes
	* libgda/gda-set.[ch]: removed dead code and declarations

2008-10-15  Vivien Malerba <malerba@gnome-db.org>

	* providers/mysql/gda-mysql-pstmt.[ch]:
	* providers/mysql/gda-mysql-blob-op.[ch]:
	* providers/mysql/gda-mysql-provider.c:
	* providers/mysql/gda-mysql-recordset.[ch]: corrections for cursor based access SELECT
	statements, thanks to Carlos Savoretti
	* libgda/gda-data-model-iter.[ch]: added the gda_data_model_iter_compute_attributes()
	method to force the iterator to compute and set the correct attributes for
	each of its GdaHolder; a separate method is required because computing them
	all the time consumes too much ressources, see bug #556327


2008-10-15  Johannes Schmid  <jschmid@openismus.com>

	* libgda/Makefile.am: Install gda-error.h header
	* libgda/gda-error.c (gda_error_get_type):
	Fixed a typo (GDaError <-> GdaError), for bug #556258

2008-10-13  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-error.[ch]: declare a GDA_TYPE_ERROR by registering a boxed type
	for GError
	* libgda/gda-custom-marshal.[ch]: implement custom marshallers where needed
	* libgda/gda-column.c: moved custom marshaller to libgda/gda-custom-marshal.[ch]
	* libgda/gda-data-proxy.c:
	* libgda/gda-holder.c:
	* libgda/gda-set.c: implemented custom marshallers for the following signals:
	  - GdaSet::validate-set
	  - GdaSet::validate-holder-changed
	  - GdaSet::holder-attr-changed